--- a/src/transformations_test/reports/transformations_test_transformations_files/transformations_test_transformations_temp.html
+++ b/src/transformations_test/reports/transformations_test_transformations_files/transformations_test_transformations_temp.html
@@ -1,8 +1,9 @@
 <map id="transformations" name="transformations">
-<area shape="rect" id="node1" href="STARTt1END" title="{{ {description|code|notes|ttype} | {functions|, require(splines), , ||tools} }}" alt="" coords="19,122,336,262"/>
-<area shape="rect" id="node17" href="STARTt3END" title="{{ {description|code|notes|TASK|ttype} | {load|, # TASK get some data loaded, ||, TASK|load} }}" alt="" coords="36,427,471,602"/>
-<area shape="rect" id="node4" href="STARTt2END" title="{{ {description|code|notes|KEYNODE|ttype} | {data|, ||a key dataset|data} }}" alt="" coords="360,105,629,279"/>
-<area shape="rect" id="node22" href="STARTt4END" title="{{ {description|code|notes|ttype} | {clean|, ||clean} }}" alt="" coords="157,750,349,890"/>
-<area shape="rect" id="node28" href="STARTt5END" title="{{ {description|notes|ttype} | {do|model selection procedure|do} }}" alt="" coords="5,1038,389,1143"/>
-<area shape="rect" id="node34" href="STARTt6END" title="{{ {description|code|notes|TASK|ttype} | {report|, ||collate results|report} }}" alt="" coords="12,1291,284,1466"/>
+<area shape="rect" id="node1" href="STARTt1END" title="{{ {description|code|notes|ttype} | {functions|, require(splines), , ||tools} }}" alt="" coords="237,117,504,241"/>
+<area shape="rect" id="node17" href="STARTt3END" title="{{ {description|code|notes|TASK|ttype} | {load|, # TASK get some data loaded, ||, TASK|load} }}" alt="" coords="186,400,555,555"/>
+<area shape="rect" id="node4" href="STARTt2END" title="{{ {description|code|notes|KEYNODE|ttype} | {data|, ||a key dataset|data} }}" alt="" coords="569,101,799,256"/>
+<area shape="rect" id="node36" href="STARTt6END" title="{{ {description|notes|ttype} | {data checking|model selection procedure|data_checking} }}" alt="" coords="371,1236,695,1329"/>
+<area shape="rect" id="node22" href="STARTt4END" title="{{ {description|code|notes|ttype} | {clean|, ||clean} }}" alt="" coords="288,699,453,823"/>
+<area shape="rect" id="node28" href="STARTt5END" title="{{ {description|notes|ttype} | {do|model selection procedure|do} }}" alt="" coords="110,968,433,1061"/>
+<area shape="rect" id="node41" href="STARTt7END" title="{{ {description|code|notes|TASK|ttype} | {report|, ||collate results|report} }}" alt="" coords="5,1205,232,1360"/>
 </map>
