--- a/src/transformations_test/reports/transformations_test_transformations.html
+++ b/src/transformations_test/reports/transformations_test_transformations.html
@@ -15,11 +15,12 @@ return false;
 //-->
 </SCRIPT>
 <map id="transformations" name="transformations">
-<area shape="rect" id="node1" onClick=popup("transformations_test_transformations_files/t1.txt") title="{{ {description|code|notes|ttype} | {functions|, require(splines), , ||tools} }}" alt="" coords="19,122,336,262"/>
-<area shape="rect" id="node17" onClick=popup("transformations_test_transformations_files/t3.txt") title="{{ {description|code|notes|TASK|ttype} | {load|, # TASK get some data loaded, ||, TASK|load} }}" alt="" coords="36,427,471,602"/>
-<area shape="rect" id="node4" onClick=popup("transformations_test_transformations_files/t2.txt") title="{{ {description|code|notes|KEYNODE|ttype} | {data|, ||a key dataset|data} }}" alt="" coords="360,105,629,279"/>
-<area shape="rect" id="node22" onClick=popup("transformations_test_transformations_files/t4.txt") title="{{ {description|code|notes|ttype} | {clean|, ||clean} }}" alt="" coords="157,750,349,890"/>
-<area shape="rect" id="node28" onClick=popup("transformations_test_transformations_files/t5.txt") title="{{ {description|notes|ttype} | {do|model selection procedure|do} }}" alt="" coords="5,1038,389,1143"/>
-<area shape="rect" id="node34" onClick=popup("transformations_test_transformations_files/t6.txt") title="{{ {description|code|notes|TASK|ttype} | {report|, ||collate results|report} }}" alt="" coords="12,1291,284,1466"/>
+<area shape="rect" id="node1" onClick=popup("transformations_test_transformations_files/t1.txt") title="{{ {description|code|notes|ttype} | {functions|, require(splines), , ||tools} }}" alt="" coords="237,117,504,241"/>
+<area shape="rect" id="node17" onClick=popup("transformations_test_transformations_files/t3.txt") title="{{ {description|code|notes|TASK|ttype} | {load|, # TASK get some data loaded, ||, TASK|load} }}" alt="" coords="186,400,555,555"/>
+<area shape="rect" id="node4" onClick=popup("transformations_test_transformations_files/t2.txt") title="{{ {description|code|notes|KEYNODE|ttype} | {data|, ||a key dataset|data} }}" alt="" coords="569,101,799,256"/>
+<area shape="rect" id="node36" onClick=popup("transformations_test_transformations_files/t6.txt") title="{{ {description|notes|ttype} | {data checking|model selection procedure|data_checking} }}" alt="" coords="371,1236,695,1329"/>
+<area shape="rect" id="node22" onClick=popup("transformations_test_transformations_files/t4.txt") title="{{ {description|code|notes|ttype} | {clean|, ||clean} }}" alt="" coords="288,699,453,823"/>
+<area shape="rect" id="node28" onClick=popup("transformations_test_transformations_files/t5.txt") title="{{ {description|notes|ttype} | {do|model selection procedure|do} }}" alt="" coords="110,968,433,1061"/>
+<area shape="rect" id="node41" onClick=popup("transformations_test_transformations_files/t7.txt") title="{{ {description|code|notes|TASK|ttype} | {report|, ||collate results|report} }}" alt="" coords="5,1205,232,1360"/>
 </map>
 <IMG SRC="transformations_test_transformations_files/transformations_test_transformations.jpg" USEMAP="#transformations" />
