--- a/src/transformations_test/reports/transformations_test_transformations_files/transformations_test_transformations_temp.html
+++ b/src/transformations_test/reports/transformations_test_transformations_files/transformations_test_transformations_temp.html
@@ -1,9 +1,9 @@
 <map id="transformations" name="transformations">
-<area shape="rect" id="node1" href="STARTt1END" title="{{ {description|code|notes|ttype} | {functions|, require(splines), , ||tools} }}" alt="" coords="237,117,504,241"/>
-<area shape="rect" id="node17" href="STARTt3END" title="{{ {description|code|notes|TASK|ttype} | {load|, # TASK get some data loaded, ||, TASK|load} }}" alt="" coords="186,400,555,555"/>
-<area shape="rect" id="node4" href="STARTt2END" title="{{ {description|code|notes|KEYNODE|ttype} | {data|, ||a key dataset|data} }}" alt="" coords="569,101,799,256"/>
-<area shape="rect" id="node36" href="STARTt6END" title="{{ {description|notes|ttype} | {data checking|model selection procedure|data_checking} }}" alt="" coords="371,1236,695,1329"/>
-<area shape="rect" id="node22" href="STARTt4END" title="{{ {description|code|notes|ttype} | {clean|, ||clean} }}" alt="" coords="288,699,453,823"/>
-<area shape="rect" id="node28" href="STARTt5END" title="{{ {description|notes|ttype} | {do|model selection procedure|do} }}" alt="" coords="110,968,433,1061"/>
-<area shape="rect" id="node41" href="STARTt7END" title="{{ {description|code|notes|TASK|ttype} | {report|, ||collate results|report} }}" alt="" coords="5,1205,232,1360"/>
+<area shape="rect" id="node1" href="STARTt1END" title="{{ {description|code|notes|ttype} | {functions|, require(splines), , ||func} }}" alt="" coords="299,105,616,245"/>
+<area shape="rect" id="node17" href="STARTt3END" title="{{ {description|code|notes|TASK|ttype} | {load|, # TASK get some data loaded, ||, TASK|load} }}" alt="" coords="240,393,675,567"/>
+<area shape="rect" id="node4" href="STARTt2END" title="{{ {description|notes|KEYNODE|ttype} | {data||a key dataset|data} }}" alt="" coords="705,105,975,245"/>
+<area shape="rect" id="node36" href="STARTt6END" title="{{ {description|notes|ttype} | {data checking|model selection procedure|data_checking} }}" alt="" coords="448,1326,832,1431"/>
+<area shape="rect" id="node22" href="STARTt4END" title="{{ {description|code|notes|ttype} | {clean|, ||clean} }}" alt="" coords="341,715,533,855"/>
+<area shape="rect" id="node28" href="STARTt5END" title="{{ {description|code|notes|ttype} | {do||model selection procedure|do} }}" alt="" coords="128,1003,512,1143"/>
+<area shape="rect" id="node41" href="STARTt7END" title="{{ {description|code|notes|TASK|ttype} | {report|, ||collate results|report} }}" alt="" coords="5,1291,277,1466"/>
 </map>
